unpackaged/main/default/objects/User/fields/Advisor_SSN__c.field-meta.xml
<CustomField>
    <fullName>Advisor_SSN__c</fullName>
    <label>Advisor SSN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>