unpackaged/main/default/objects/User/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1031 Investment Services</fullName>
            </value>
            <value>
                <fullName>Advanced Wealth Strategies Group</fullName>
            </value>
            <value>
                <fullName>Animas Capital Management</fullName>
            </value>
            <value>
                <fullName>Ashland Pacific</fullName>
            </value>
            <value>
                <fullName>Boston Wealth Advisor Group</fullName>
            </value>
            <value>
                <fullName>Bridge Equities</fullName>
            </value>
            <value>
                <fullName>Butler Financial Advisors</fullName>
            </value>
            <value>
                <fullName>Caliber Wealth Management</fullName>
            </value>
            <value>
                <fullName>Capata Financial</fullName>
            </value>
            <value>
                <fullName>Charles Badalamenti</fullName>
            </value>
            <value>
                <fullName>Cipolla Financial</fullName>
            </value>
            <value>
                <fullName>City Center Wealth</fullName>
            </value>
            <value>
                <fullName>Coughlan &amp; Coughlan Financial Solutions</fullName>
            </value>
            <value>
                <fullName>Diversify - Orem</fullName>
            </value>
            <value>
                <fullName>Diversify - Sandy</fullName>
            </value>
            <value>
                <fullName>Dst Properties</fullName>
            </value>
            <value>
                <fullName>Evergreen Advisor Group</fullName>
            </value>
            <value>
                <fullName>Financial Foundations Insurance &amp; Investments</fullName>
            </value>
            <value>
                <fullName>Financial Resources</fullName>
            </value>
            <value>
                <fullName>First Financial Center Of Dallas</fullName>
            </value>
            <value>
                <fullName>Gen 1 Financial</fullName>
            </value>
            <value>
                <fullName>Glide Financial Group</fullName>
            </value>
            <value>
                <fullName>Global Wealth Partners Inc</fullName>
            </value>
            <value>
                <fullName>Gomez Corporation</fullName>
            </value>
            <value>
                <fullName>Grady Capital Group</fullName>
            </value>
            <value>
                <fullName>Grove Wealth Advisors</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Independent - Craig Watanabe</fullName>
            </value>
            <value>
                <fullName>INPAC Wealth Solutions</fullName>
            </value>
            <value>
                <fullName>Inventa Wealth Advisors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>