unpackaged/main/default/objects/User/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <label>Branch ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>