unpackaged/main/default/objects/User/fields/Department_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Department_Picklist__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
            <value>
                <fullName>Advisor Solutions</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>