unpackaged/main/default/objects/User/fields/Diversify_Related_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Diversify_Related_Person_ID__c</fullName>
    <label>Diversify Related Person ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>