unpackaged/main/default/objects/User/fields/Has_Seen_Welcome__c.field-meta.xml
<CustomField>
    <fullName>Has_Seen_Welcome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true after the user has seen the &quot;Welcome to Nexus&quot; video. Drives the first-login welcome flow.</description>
    <label>Has Seen Welcome</label>
    <type>Checkbox</type>
</CustomField>