unpackaged/main/default/objects/User/fields/Notification_Email_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Delivery_Address__c</fullName>
    <description>Optional override email address for notification delivery.</description>
    <label>Notification Email Delivery Address</label>
    <type>Email</type>
</CustomField>