unpackaged/main/default/objects/User/fields/Notification_Email_Digest__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Digest__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this user receives digest email notifications.</description>
    <label>Notification Email Digest</label>
    <type>Checkbox</type>
</CustomField>