unpackaged/main/default/objects/User/fields/Notification_Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether email is an active notification delivery channel for this user.</description>
    <label>Notification Email Enabled</label>
    <type>Checkbox</type>
</CustomField>