unpackaged/main/default/objects/User/fields/Notification_Email_HTML_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_HTML_Formatted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether notification emails use HTML formatting for this user.</description>
    <label>Notification Email HTML Formatted</label>
    <type>Checkbox</type>
</CustomField>