unpackaged/main/default/objects/User/fields/Notification_Email_Immediate__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Immediate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this user receives immediate email notifications.</description>
    <label>Notification Email Immediate</label>
    <type>Checkbox</type>
</CustomField>