unpackaged/main/default/objects/User/fields/Notification_In_App_Digest__c.field-meta.xml
<CustomField>
    <fullName>Notification_In_App_Digest__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this user receives digest in-app notifications.</description>
    <label>Notification In-App Digest</label>
    <type>Checkbox</type>
</CustomField>