unpackaged/main/default/objects/User/fields/Notification_In_App_Immediate__c.field-meta.xml
<CustomField>
    <fullName>Notification_In_App_Immediate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this user receives immediate in-app notifications.</description>
    <label>Notification In-App Immediate</label>
    <type>Checkbox</type>
</CustomField>