unpackaged/main/default/objects/User/fields/Notification_Zoom_Digest__c.field-meta.xml
<CustomField>
    <fullName>Notification_Zoom_Digest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this user receives digest Zoom notifications.</description>
    <label>Notification Zoom Digest</label>
    <type>Checkbox</type>
</CustomField>