unpackaged/main/default/objects/User/fields/Notification_Zoom_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Zoom_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Zoom is an active notification delivery channel for this user.</description>
    <label>Notification Zoom Enabled</label>
    <type>Checkbox</type>
</CustomField>