unpackaged/main/default/objects/User/fields/Notification_Zoom_Immediate__c.field-meta.xml
<CustomField>
    <fullName>Notification_Zoom_Immediate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this user receives immediate Zoom notifications.</description>
    <label>Notification Zoom Immediate</label>
    <type>Checkbox</type>
</CustomField>