unpackaged/main/default/objects/User/fields/Notification_Zoom_Respect_DND__c.field-meta.xml
<CustomField>
    <fullName>Notification_Zoom_Respect_DND__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether Zoom Do Not Disturb is respected for this user&#39;s notifications.</description>
    <label>Notification Zoom Respect DND</label>
    <type>Checkbox</type>
</CustomField>