unpackaged/main/default/objects/User/fields/Notification_Zoom_Username__c.field-meta.xml
<CustomField>
    <fullName>Notification_Zoom_Username__c</fullName>
    <description>Zoom username used for notification delivery.</description>
    <label>Notification Zoom Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>