unpackaged/main/default/objects/User/fields/Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee__c</fullName>
    <defaultValue>&#39;Unassigned&#39;</defaultValue>
    <label>Platform Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>8 bps</fullName>
            </value>
            <value>
                <fullName>10 bps</fullName>
            </value>
            <value>
                <fullName>12 bps</fullName>
            </value>
            <value>
                <fullName>12.5 bps</fullName>
            </value>
            <value>
                <fullName>15 bps</fullName>
            </value>
            <value>
                <fullName>17 bps</fullName>
            </value>
            <value>
                <fullName>20 bps</fullName>
            </value>
            <value>
                <fullName>No Platform Fee</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>DMS+ Peter Burnham Payout 37.5 bps</fullName>
            </value>
            <value>
                <fullName>GWP 20 bps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>