unpackaged/main/default/objects/User/fields/Redtail_User__c.field-meta.xml
<CustomField>
    <fullName>Redtail_User__c</fullName>
    <defaultValue>&#39;No&#39;</defaultValue>
    <label>Redtail User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>