unpackaged/main/default/objects/User/fields/RIA_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>RIA_Affiliation__c</fullName>
    <label>RIA Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DWM</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>