unpackaged/main/default/objects/User/fields/Task_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Task_Email_Notifications__c</fullName>
    <defaultValue>&#39;Yes&#39;</defaultValue>
    <label>Task Email Notifications?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>