unpackaged/main/default/objects/User/fields/Wizard_View_Preference__c.field-meta.xml
<CustomField>
    <fullName>Wizard_View_Preference__c</fullName>
    <label>Wizard View Preference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>